--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,111 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header >
+  <ion-toolbar color="dark">
     <ion-title>
-      Tab 1
+      Pokedex
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-searchbar placeholder="Buscar Pokemons"></ion-searchbar>
+
+  <ion-list>
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Bulbasaur</h3>
+          <ion-badge color="verde">Grass</ion-badge>
+          <ion-badge color="roxo">Poison</ion-badge>
+        </div>
+      </ion-label>
+
+      <ion-chip color="success">
+        <ion-label>001</ion-label>
+      </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
+  <ion-list>
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Charmander</h3>
+          <ion-badge color="laranja">Fire</ion-badge>
+        </div>
+      </ion-label>
+
+      <ion-chip color="success">
+        <ion-label>004</ion-label>
+      </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
+  <ion-list>
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Squirtle</h3>
+          <ion-badge color="azul">Water</ion-badge>
+        </div>
+      </ion-label>
+
+      <ion-chip color="success">
+        <ion-label>007</ion-label>
+      </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
+  <ion-list>
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/025.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Pikachu</h3>
+          <ion-badge color="amarelo">Eletric</ion-badge >
+        </div>
+      </ion-label>
+
+      <ion-chip color="success">
+        <ion-label>025</ion-label>
+      </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
+  <ion-list>
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/052.png">
+      </ion-thumbnail>
+      <ion-label>
+        <div>
+          <h3>Meomth</h3>
+          <ion-badge color="medium">Normal</ion-badge>
+        </div>
+      </ion-label>
+
+      <ion-chip color="success">
+        <ion-label>052</ion-label>
+      </ion-chip>
+    </ion-item>
+  </ion-list>
+
+
+  <ion-item>
+</ion-item>
 </ion-content>
